[package]
name = "server_dot"
version = "0.1.0"
edition = "2021"
[lib]
path = "src/lib.rs"
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4.0"
anyhow = "1.0.95"
rand = "0.8.5"
tracing-subscriber = { version = "0.3", features = [    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',] }
tracing = { version ="0.1.40", features = ["log"] }
tracing-appender = "0.2"